# cdk-bucket-takeover-scanner

./: .gitignore  .isort.cfg  LICENSE  README.md  pyproject.toml  scan.py  setup.cfg
.github/workflows/: ci.yml
src/: account_manager.py  banner.py  cdk_bucket_scanner.py  policy_manager.py  report_writer.py
tests/: test_account_manager.py  test_cdk_bucket_scanner.py  test_policy_manager.py
